manifests/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-backend
  template:
    metadata:
      labels:
        app: history-care-backend
    spec:
      containers:
        - name: history-care-backend
          image: history-care-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env: *backend-env
---
apiVersion: v1
kind: Service
metadata:
  name: history-care-backend
spec:
  selector:
    app: history-care-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
