manifests/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-frontend
  template:
    metadata:
      labels:
        app: history-care-frontend
    spec:
      containers:
        - name: history-care-frontend
          image: history-care-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: history-care-conf
---
apiVersion: v1
kind: Service
metadata:
  name: history-care-frontend
spec:
  selector:
    app: history-care-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
