manifests/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-postgres
  template:
    metadata:
      labels:
        app: history-care-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: history-care-postgres
spec:
  selector:
    app: history-care-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
