manifests/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-redis
  template:
    metadata:
      labels:
        app: history-care-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: history-care-redis
spec:
  selector:
    app: history-care-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
