manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: history-care-ingress
spec:
  rules:
    - host: history-care.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: history-care-frontend
                port:
                  number: 80
